<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".locationactivity.LocationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/motometer_pro_needs_precise_location_permission_to_do_the_job"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/please_grant_permission_and_enable_location"
            android:textSize="15sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_weight="1.3"
        app:srcCompat="@drawable/map" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:text="@string/give_permission_and_enable_location"
            android:textSize="16sp"
            app:cornerRadius="5dp"
            android:backgroundTint="#2778DA"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/permission_error"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="#9D2222"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/please_grant_precise_location_permission_and_enable_gps"
            android:textSize="15sp"
            android:visibility="gone"/>
    </LinearLayout>

</LinearLayout>