<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/DayNightLinearLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        style="@style/DayNightSettingItem"
        android:padding="15dp">

        <TextView
            android:id="@+id/call_rejection_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/allow_call_rejection"
            android:textSize="19sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/call_rejection_desc"
            app:layout_constraintEnd_toStartOf="@+id/call_rejection_switch"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/call_rejection_desc"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/call_rejection_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/call_rejection_switch"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/call_rejection_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/call_rejection_desc"
            app:layout_constraintTop_toTopOf="parent"
            app:thumbIcon="@drawable/baseline_check_24"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/share_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="15dp"
        android:text="@string/share_this_app"
        android:textColor="@color/white"

        android:textSize="16sp"
        style="@style/DayNightSettingItem"
        app:drawableStartCompat="@drawable/share"
        app:drawableEndCompat="@drawable/baseline_arrow_forward"
        android:drawablePadding="10dp"
        app:drawableTint="@color/white" />

    <TextView
        android:id="@+id/rate_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="15dp"
        android:text="@string/rate_this_app"
        android:textColor="@color/white"
        style="@style/DayNightSettingItem"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/rate_us"
        app:drawableEndCompat="@drawable/baseline_arrow_forward"
        android:drawablePadding="10dp"
        app:drawableTint="@color/white" />


</LinearLayout>

